prevent overflow issue on small screens

--- a/apps/sps-stadnamn-web/src/app/globals.css
+++ b/apps/sps-stadnamn-web/src/app/globals.css
@@ -11,7 +11,7 @@
   }
 
   html:has(.search-view), body:has(.search-view), main.search-view {
-    @apply h-full overflow-hidden;
+    @apply md:h-full md:overflow-hidden;
   }
 
 
